--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,7 @@ spring.mvc.view.suffix=.html
 
 #path config
 user.profile.image.path=images/users/
+category.profile.image.path=images/category/
 
 logging.file.name=app.log
 
