--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,6 +19,7 @@ spring.mvc.view.suffix=.html
 #path config
 user.profile.image.path=images/users/
 category.profile.image.path=images/category/
+product.profile.image.path=images/products/
 
 logging.file.name=app.log
 
